--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
 
 <!-- End header -->
 
+<div class="content">
+
 <!-- START "Mission" Container -->
+
     <div class="mission" id="mission">
       <div class="mission-heading">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small
-        Batch, Fair Trade, Organic Tea</h4>        
+        Batch, Fair Trade, Organic Tea</h4>
       </div>
     </div>
 <!-- END "Mission" Container -->
@@ -35,7 +38,34 @@
 
 <!-- START "Tea of the Month" Container -->
     <div class="featuredtea" id="featuredtea">
-
+      <div class="featuredtea-heading">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy</h4>
+      </div>
+      <div class="teas-row-1">
+        <div class="tea-1-container">
+          <img src="resources/images/img-berryblitz.jpg" alt="Berry Blitz">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="tea-2-container">
+          <img src="resources/images/img-spiced-rum.jpg" alt="Spiced Rum">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="tea-3-container">
+          <img src="resources/images/img-donut.jpg" alt="Seasonal Donuts">
+          <h4>Seasonal Donuts</h4>
+        </div>
+      </div>
+      <div class="teas-row-2">
+        <div class="tea-4-container">
+          <img src="resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="tea-5-container">
+          <img src="resources/images/img-bedford-bizarre.jpg" alt="Bedford Tea">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
     </div>
 <!-- END "TEa of the Month" Container -->
 
@@ -43,24 +73,48 @@
 <!-- START "Locations" Container -->
     <div class="locations" id="locations">
 
+      <div class="locations-header">
+        <h2>Locations</h2>
+      </div>
+      <div class="location-container">
+        <div class="location">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Porland, Maine</p>
+        </div>
+        <div class="location">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northeast Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location">
+          <h3>Oakdale</h3>
+          <p>515 Cresent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+
     </div>
 <!-- END "Locations" Container -->
 
 
 <!-- START "Contact" Container -->
     <div class="contact">
-
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
     </div>
 <!-- END "Contact" Container -->
 
 
-
 <!-- START Footer -->
     <footer class="footer">
-
+      <h5>copyright The Tea Cozy 2017</h5>
     </footer>
 <!-- END Footer -->
-
-
+  </div>
   </body>
 </html>
